main.css
/* #region Boilerplate */

html {
	font-size: 100%;
	box-sizing: border-box;
	font-family: Arial, Helvetica, sans-serif;
	min-height: 100%;
	scroll-behavior: smooth;
}
html p {
	line-height: 1.5rem;
}

@media (prefers-reduced-motion) {
	html {
		scroll-behavior: initial;
	}
}

*,
*::before,
*::after {
	box-sizing: inherit;
	margin-block: 0;
	padding-inline: 0;
}

body {
	margin: 0 auto;
	padding: 0;
	height: 100vh;
	/* height: 100%; */
	/* background-repeat: no-repeat;
  background-attachment: fixed; */
}

img {
	width: 100%;
	height: auto;
	display: block;
}

/* #endregion Boilerplate */

html {
	--colBackgound: white;
	--rowOdd: #adb5bd;
	--rowEven: #dee2e6;
}

* {
	margin: 0;
	padding: 0;
}

/* #region 3part expanding setup */

.expBox {
	display: flex;
	flex-flow: column;
}

.expBox > .expTop {
	flex: 0 1 auto;
	/* The above is shorthand for:
  flex-grow: 0,
  flex-shrink: 1,
  flex-basis: auto
  */
}

.expBox > .expMiddle {
	flex: 1 1 auto;
}

.expBox > .expBottom {
	flex: 0 1 40px;
}

/* #endregion expanding setup */
/* #region navbar */

.navbar {
	height: 60px;
	width: 100%;
	background-color: white;
	-webkit-box-shadow: 0px 0px 10px -2px #9d9d9d;
	box-shadow: 0px 0px 10px -2px #9d9d9d;
	align-items: center;
	justify-content: center;
}

.navbar ul {
	list-style-type: none;
	overflow: hidden;
}

.navbar li {
	float: left;
}

.navbar li a {
	display: block;
	text-align: center;
	padding: 18px 16px;
	text-decoration: none;
	color: black;
	font-size: 18px;
}

.navbar li a:hover {
	color: #343a40;
	cursor: pointer;
}

/* #endregion navbar */
/* #region deko */

.obenlinks {
	position: fixed;
	height: 200px;
	width: 300px;
}

.obenlinks1 {
	position: fixed;
	height: 200px;
	width: 300px;
	z-index: -1;
}

.schraege {
	position: fixed;
	height: 600px;
	width: 600px;
	z-index: 0;
}

.schraege1 {
	position: fixed;
	height: 600px;
	width: 600px;
	z-index: -1;
}

.untenrechts {
	position: fixed;
	height: 437.4px;
	width: 300px;
	right: 0;
	bottom: 0;
}

.mitte {
	position: fixed;
	height: 100%;
	left: 50%;
}

.mitte1 {
	position: fixed;
	height: 100%;
	left: 50%;
	z-index: -1;
}
/* #endregion deko */
/* #region inhalt*/

.inhalt {
	--inhaltPadding: 1em;

	position: relative;
	float: left;
	/* height: 100%; */
	height: auto;
	width: 100%;
	z-index: 10;
	overflow: hidden;
	padding: var(--inhaltPadding);

	/* height: 100%; */
	/* height: auto; */
}

/* #region map */

#map,
#mapInfo,
#mapInfoBox {
	border-radius: 5px;
}

#map,
#mapInfo {
	-webkit-box-shadow: 0px 0px 10px -2px #9d9d9d;
	box-shadow: 0px 0px 10px -2px #9d9d9d;
}

#mapInfoBox {
	display: none; /* block none*/
	--rememberDisplay: block; /* holds display for toggle */

	position: absolute;
	left: var(--inhaltPadding);
	right: var(--inhaltPadding);
	overflow: hidden;
	z-index: 10;

	/* width: 50%; only for debugging */
	width: 35%;
	/* height: 100%; */
	/* height: auto; */
	padding: 0.8em;

	/* make div click through */
	pointer-events: none;
}
#mapInfoBox * {
	/* revert clickthrough for  */
	pointer-events: initial;
}

#mapInfo {
	overflow: scroll;
	background-color: var(--colBackgound);
	/* background-color: red; */
	opacity: 0.8;
	padding: 20px;

	width: 100%;
	/* height: 100%; */
	/* height: auto; */
}

#map {
	width: 100%;
	height: 100%; /* 100% */
}

#MapMarkerInfo_Titel {
	font-size: 18px;
}

.table_row_odd {
	background-color: var(--rowOdd);
}

.table_row_even {
	background-color: var(--rowEven);
}

.table {
	width: 100%;
	text-align: center;
	padding: 20px 0px;
}

.table td {
	/* padding: 8px 42.5px 6px 42.5px; */
	padding: 8px 0em 6px 0em;
}

#info_Vereine {
	line-height: 25px;
}

/* sportarten auflistung */
.listing {
	font-size: 70%;
	line-height: inherit;
}

/* #endregion map */
/* #region mehr */

.mehrInhalt {
	height: 100%;
	width: 100%;
	border-radius: 5px;
	z-index: 10;
	-webkit-box-shadow: 0px 0px 10px -2px #9d9d9d;
	box-shadow: 0px 0px 10px -2px #9d9d9d;
	background-color: var(--colBackgound);
}

.mehrtext {
	position: absolute;
	padding-top: 60px;
	padding-left: 70px;
	padding-right: 800px;
	font-size: 20px;
}

.mehrInformationüberdieWebsite {
	font-size: 21px;
	font-weight: normal;
}

.mehrInformationüberdasProjekt {
	font-size: 21px;
	font-weight: normal;
}

.mehrText {
	padding-top: 30px;
}

.mehrBild {
	position: absolute;
	padding-left: 800px;
	padding-top: 10px;
}

/* #endregion mehr */
/* #region kontakt */

.kontaktInhalt {
	height: 100%;
	width: 100%;
	border-radius: 5px;
	z-index: 10;
	-webkit-box-shadow: 0px 0px 10px -2px #9d9d9d;
	box-shadow: 0px 0px 10px -2px #9d9d9d;
	background-color: var(--colBackgound);
}

.kontakttext {
	position: relative;
	padding-top: 60px;
	padding-left: 70px;
	padding-right: 800px;
	font-size: 20px;
}

.kontakt {
	font-size: 21px;
	font-weight: normal;
}

.namenundmails {
	padding-top: 30px;
}

/* #endregion kontakt */

/* #endregion inhalt */

/* TEST */

